---
title: edu.nust.game.scenes.levelscene.gameobjects.enemy
config:
  look: classic
  layout: elk
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
  class EnemyConfig <<enumeration>>
namespace edu.nust.game.scenes.levelscene.gameobjects.enemy.spawner {
  class EnemySpawnPointGameObject
  class EnemySpawner
}
namespace edu.nust.game.scenes.levelscene.gameobjects.enemy.types {
  class MiniBoss
  class BasicEnemy
  class Facing <<enumeration>>
  class Boss
  class Enemy
}
namespace edu.nust.game.scenes.levelscene.gameobjects.enemy.types.Attacks {
  class BossAbility1
  class BasicAttackObj
}
EnemySpawnPointGameObject --> Enemy : uses
EnemySpawner --> Boss : uses
BasicAttackObj --> Enemy : uses
BossAbility1 --> Boss : uses
Enemy <|-- BasicEnemy : extends
BasicEnemy --> Facing : uses
Boss --> BasicAttackObj : uses
Boss --> BossAbility1 : uses
Enemy <|-- Boss : extends
Boss --> Facing : uses
MiniBoss --> BasicAttackObj : uses
Enemy <|-- MiniBoss : extends
MiniBoss --> Facing : uses